--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <div class="container">
     <div class="calculator">
